# MSc_Projects

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt
BM5113 - Bilgisayarla Görme/HW1/: 1.1.ipynb  1.2.ipynb  1.3.ipynb  hw1.ipynb  utils.py
BM5113 - Bilgisayarla Görme/Project Proposal/: docs
BM5113 - Bilgisayarla Görme/final_kısım_I/: ,,.txt  classification.ipynb  classification.py  segmentation.ipynb  segmentation.py  transferLearning.py  unet.py
BM5113 - Bilgisayarla Görme/hw1/: 1.1.ipynb  1.2.ipynb  1.3.ipynb  1.4.ipynb  hw1.ipynb  utils.py
BM5113 - Bilgisayarla Görme/hw2/: burcu.py  template.tif  utensils_data_read.py  utils.py  ödev.ipynb  ödev2.1.ipynb  ödev2.2.ipynb  ödev2.3 copy.ipynb  ödev2.3.ipynb
BM5113 - Bilgisayarla Görme/hw3/: 3.1.ipynb  3.2.ipynb  3.3.ipynb
BM5113 - Bilgisayarla Görme/hw_final/: avi_reader.py  transferLearning.py  ödev_final.ipynb
BM5115 - Doğal Dil İşleme/docs/: proje konusu
BM5121 - Görüntü İşleme Ve Uygulamaları/Ödev 11 Korelasyon filtresi ve nesne tanıma/: temp_match.ipynb
BM5121 - Görüntü İşleme Ve Uygulamaları/Ödev 11: Korelasyon filtresi ve nesne tanıma/: correlation.py  norm_xcorr.py  ödev.ipynb
BM5121 - Görüntü İşleme Ve Uygulamaları/Ödev 12: Periyodik gürültülerin FFT ile kaldırılması/: ödev.ipynb
BM5121 - Görüntü İşleme Ve Uygulamaları/Ödev 2 İmge ton iyileştirme, siyah beyaz dönüşümü, kontrast iyileştirme/: ödev copy.ipynb  ödev.ipynb
BM5121 - Görüntü İşleme Ve Uygulamaları/Ödev 4/: ödev.ipynb
cpp_test_project/: CMakeLists.txt  main.cpp
(+205 files in other folders)
